# ElectricityDemandForecasting

./: .gitignore  README.md  main.py  pyproject.toml
data/: initial_data_handling.ipynb
feature_selection/: selection_via_training.ipynb
process/: prcs.ipynb  xplr.ipynb
process/checkpoints/: gru_moe_model.pth
report/: Makefile  main.tex
src/FrontEnd/: package-lock.json  package.json
src/FrontEnd/src/app/: FramePlayer.js  LassoImageSelector.js  UserInput.js  VideoPlayer.js  page.js
